--- a/src/WavPlayer/CMakeLists.txt
+++ b/src/WavPlayer/CMakeLists.txt
@@ -4,68 +4,49 @@
 cmake_minimum_required(VERSION 3.0.2)
 
 project(WavPlayer)
+
+option(STATIC_LIBS "Build static libraries" OFF)
+
 find_package(OpenRTM REQUIRED)
 
 string(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
 set(PROJECT_VERSION 2.0.0 CACHE STRING "WavPlayer version")
 set(PROJECT_TYPE "c++/OpenHRI")
 
-#
-# Check Distribution and Package Manager
-CheckPkgManager()
-
 # Add an "uninstall" target
 AddUninstallTarget()
 
-option(BUILD_DOCUMENTATION "Build the documentation" OFF)
-option(BUILD_IDL "Build and install idl" ON)
-
-option(STATIC_LIBS "Build static libraries" OFF)
-if(STATIC_LIBS)
-    set(LIB_TYPE STATIC)
-else(STATIC_LIBS)
-    set(LIB_TYPE SHARED)
-endif(STATIC_LIBS)
-
-# Set up installation directories
-SetupInstDirs()
-
-# Subdirectories
-#add_subdirectory(cmake)
-if(BUILD_DOCUMENTATION)
-    add_subdirectory(doc)
-endif(BUILD_DOCUMENTATION)
+get_filename_component(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_LIST_DIR}/../Components" ABSOLUTE)
+RewriteBuildOptions()
 
 ##############
 #  Build
 ##############
-if(BUILD_IDL)
-  include("${OPENRTM_DIR}/cmake/idl_compile.cmake")
-  set(idls
-    ${CMAKE_CURRENT_SOURCE_DIR}/idl/BasicDataType.idl
-  )
-  OPENRTM_COMPILE_IDL_FILES(${idls})
-  FILTER_LIST("ALL_IDL_SRCS" "hh$" idl_headers)
-endif(BUILD_IDL)
+#
+#  Addtional IDL files
+#add_idl_files(
+#  idl/BasicDataType.idl
+#  idl/ExtendedDataTypes.idl
+#)
+#
+#  compile IDL file
+#compile_idl_files()
 
 #
 #
-set(comp_headers
-  ${PROJECT_SOURCE_DIR}/include/WavPlayer.h
+set(rtc_headers
+  include/WavPlayer.h
 )
 
-set(rtc_sources
+set(rtc_srcs
     src/WavPlayer.cpp
 )
 
 set(rtc_exec_src src/WavPlayerComp.cpp)
 
-RewriteBuildOptions()
-
 include_directories(
   ${PROJECT_SOURCE_DIR}/include
   ${PROJECT_BINARY_DIR}
-  ${PROJECT_BINARY_DIR}/idl
   ${OPENRTM_INCLUDE_DIRS}
 )
 
@@ -80,39 +61,29 @@ set(OPTION_LIBRARIES ${SNDFILE_LIBRARIES})
 
 #############
 #  RTC
-set(PROJECT_RTC_SOURCES ${rtc_sources} ${comp_headers} ${ALL_IDL_SRCS})
-
-#
-#  compile IDL file
-set_source_files_properties(${ALL_IDL_SRCS} PROPERTIES GENERATED 1)
-if(NOT TARGET ALL_IDL_TGT)
-  add_custom_target(ALL_IDL_TGT)
-endif()
+set(RTC_SOURCES ${rtc_srcs} ${rtc_headers} ${ALL_IDL_SRCS})
+set(RTC_EXEC_SOURCES  ${rtc_exec_src} ${RTC_SOURCES})
 
 #
 #  Dynamic local library
-add_library(${PROJECT_NAME} ${LIB_TYPE} ${PROJECT_RTC_SOURCES})
-set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "")
-add_dependencies(${PROJECT_NAME} ALL_IDL_TGT)
-target_link_libraries(${PROJECT_NAME} ${OPENRTM_LIBRARIES} ${OPTION_LIBRARIES})
+add_rtc_library(${PROJECT_NAME} ${RTC_SOURCES})
 
 #
 # Standalone executable
-add_executable(${PROJECT_NAME}Comp ${rtc_exec_src} ${PROJECT_RTC_SOURCES})
-add_dependencies(${PROJECT_NAME}Comp ALL_IDL_TGT)
-target_link_libraries(${PROJECT_NAME}Comp ${OPENRTM_LIBRARIES} ${OPTION_LIBRARIES})
+add_rtc_executable(${PROJECT_NAME}Comp ${RTC_EXEC_SOURCES})
 
 #############
 # Install
 #############
+message("--- ${CMAKE_INSTALL_PREFIX}")
 install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}Comp
     EXPORT ${PROJECT_NAME}
-    RUNTIME DESTINATION ${INSTALL_PREFIX} COMPONENT componenet
-    LIBRARY DESTINATION ${INSTALL_PREFIX} COMPONENT componenet
-    ARCHIVE DESTINATION ${INSTALL_PREFIX} COMPONENT componenet
+    RUNTIME DESTINATION bin COMPONENT componenet
+    LIBRARY DESTINATION lib COMPONENT componenet
+    ARCHIVE DESTINATION lib COMPONENT componenet
  )
 
-install(FILES ${SNDFILE_RUNTIME} DESTINATION ${INSTALL_PREFIX})
+install(FILES ${SNDFILE_RUNTIME} DESTINATION bin)
 
 ####################
 # Package creation
