--- a/YAML/WebRTCVAD.yaml
+++ b/YAML/WebRTCVAD.yaml
@@ -33,6 +33,7 @@ dataport :
     flow : in 
     type : RTC::TimedOctetSeq
     description : Audio data input
+    datalistener : AudioIn
   - name : AudioDataOut
     flow : out
     type : RTC::TimedOctetSeq
