--- a/YAML/BeamForming.yaml
+++ b/YAML/BeamForming.yaml
@@ -33,6 +33,7 @@ dataport :
     flow : in
     type : RTC::TimedOctetSeq
     description : 音声データを入力
+    datalistener: Mic
   - name : angle
     flow : in
     type : RTC::TimedDouble
