--- a/YAML/NoiseReduction.yaml
+++ b/YAML/NoiseReduction.yaml
@@ -33,6 +33,7 @@ dataport :
     flow : in
     type : RTC::TimedOctetSeq
     description : 音声データの入力
+    datalistener : AudioIn
   - name : AudioDataOut
     flow : out
     type : RTC::TimedOctetSeq
