Updat CMakeLists.txt CMP0077

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 #
 #
+add_subdirectory(AutoGainControl)
 add_subdirectory(PortAudioInput)
 add_subdirectory(PortAudioOutput)
 add_subdirectory(WavPlayer)
