Add gitignore, SamplingRateConverter

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,6 @@
 add_subdirectory(AutoGainControl)
 add_subdirectory(PortAudioInput)
 add_subdirectory(PortAudioOutput)
+add_subdirectory(SamplingRateConverter)
 add_subdirectory(WavPlayer)
 add_subdirectory(WavRecord)
