Add PlusAudioXXX, WebRTCVAD template....

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,8 +9,16 @@ add_subdirectory(EchoCanceler)
 add_subdirectory(EchoSuppressor)
 add_subdirectory(Gate)
 add_subdirectory(Mixer)
+add_subdirectory(NoiseReduction)
 add_subdirectory(PortAudioInput)
 add_subdirectory(PortAudioOutput)
 add_subdirectory(SamplingRateConverter)
+add_subdirectory(SignalGeneration)
 add_subdirectory(WavPlayer)
 add_subdirectory(WavRecord)
+
+if(NOT WIN32)
+add_subdirectory(PulseAudioInput)
+add_subdirectory(PulseAudioOutput)
+add_subdirectory(WebRTCVAD)
+endif()
