--- a/src/DSArray/CMakeLists.txt
+++ b/src/DSArray/CMakeLists.txt
@@ -86,9 +86,11 @@ message("--- INSTALL_PREFIX:${CMAKE_INSTALL_PREFIX}")
 install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}Comp
     EXPORT ${PROJECT_NAME}
     RUNTIME DESTINATION bin COMPONENT componenet
-    LIBRARY DESTINATION lib COMPONENT componenet
-    ARCHIVE DESTINATION lib COMPONENT componenet
+#    LIBRARY DESTINATION lib COMPONENT componenet
+#    ARCHIVE DESTINATION lib COMPONENT componenet
  )
+
+gen_setup_bat()
 
 #
 #  install 3rdpary runtime libraries
