--- a/src/WebRTCVAD/CMakeLists.txt
+++ b/src/WebRTCVAD/CMakeLists.txt
@@ -84,8 +84,8 @@ message("--- INSTALL_PREFIX:${CMAKE_INSTALL_PREFIX}")
 install(TARGETS ${PROJECT_NAME} ${PROJECT_NAME}Comp
     EXPORT ${PROJECT_NAME}
     RUNTIME DESTINATION bin COMPONENT componenet
-    LIBRARY DESTINATION lib COMPONENT componenet
-    ARCHIVE DESTINATION lib COMPONENT componenet
+#    LIBRARY DESTINATION lib COMPONENT componenet
+#    ARCHIVE DESTINATION lib COMPONENT componenet
  )
 
 #
