--- a/src/PortAudioOutput/CMakeLists.txt
+++ b/src/PortAudioOutput/CMakeLists.txt
@@ -46,7 +46,7 @@ set(rtc_srcs
     src/PortAudioOutput.cpp
 )
 
-set(rtc_exec_src src/PortAudioOutputComp.cpp)
+set(rtc_exec_src src/PortAudioOutputComp.cpp src/utils.cpp)
 
 include_directories(
   ${PROJECT_SOURCE_DIR}/include
