--- a/YAML/Gate.yaml
+++ b/YAML/Gate.yaml
@@ -1,14 +1,14 @@
 name : Gate
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: Gate
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -42,10 +42,5 @@ dataport :
     type : RTC::TimedOctetSeq
     description : Audio data output
     
-configuration :
-  - name :
-    type :
-    defaultValue :
-    constraints :
-    description :
+configuration : []
     
