--- a/YAML/CombFilter.yaml
+++ b/YAML/CombFilter.yaml
@@ -1,14 +1,14 @@
 name : CombFilter
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: Comb Filter
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -41,22 +41,22 @@ dataport :
 
 configuration :
   - name : SampleRate
-    type : int
-    defaultValue : 16000
-    constraints : x >= 1
-    description : 入力音声データのサンプリング周波数 (Hz)
+    __type__ : int
+    default : 16000
+    __constraints__ : x >= 1
+    __description__ : 入力音声データのサンプリング周波数 (Hz)
   - name : Frequency
-    type : int
-    defaultValue : 100
-    constraints : x >= 0
-    description : ノイズを削減する周波数 (Hz)
+    __type__ : int
+    default : 100
+    __constraints__ : x >= 0
+    __description__ : ノイズを削減する周波数 (Hz)
   - name : Gain
-    type : int
-    defaultValue : -1
-    constraints : -1 <= x <= 1
-    description : 加減算する度合い
+    __type__ : int
+    default : -1
+    __constraints__ : -1 <= x <= 1
+    __description__ : 加減算する度合い
   - name : ChannelNumbers
-    type : int
-    defaultValue : 1
-    constraints : x >= 1
-    description : 出力する音声データのチャンネル数
+    __type__ : int
+    default : 1
+    __constraints__ : x >= 1
+    __description__ : 出力する音声データのチャンネル数
