--- a/YAML/DSArray.yaml
+++ b/YAML/DSArray.yaml
@@ -1,14 +1,14 @@
 name : DSArray
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: DS Array
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -41,13 +41,13 @@ dataport :
 
 configuration :
   - name : SampleRate
-    type : int
-    defaultValue : 16000
-    constraints : x >= 1
-    description : 入力音声データのサンプリング周波数(Hz)
+    __type__ : int
+    default : 16000
+    __constraints__ : x >= 1
+    __description__ : 入力音声データのサンプリング周波数(Hz)
   - name : ChannelNumbers
-    type : int
-    defaultValue : 4
-    constraints : x >= 2
-    deacription : 入力する音声データのチャンネル数
+    __type__ : int
+    default : 4
+    __constraints__ : x >= 2
+    __deacription__ : 入力する音声データのチャンネル数
     
