--- a/YAML/KinectAudioInput.yaml
+++ b/YAML/KinectAudioInput.yaml
@@ -1,14 +1,14 @@
 name : KinectAudioInput
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: Kinect Audio Input
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -40,13 +40,13 @@ dataport :
     
 configuration :
   - name : max_angle
-    type : double
-    defaultValue : 0.3
-    constraints : -0.9 <= x <= 0.9
-    description : 録音可能な音源の方向の上限（Kinectの正面を0とする)
+    __type__ : double
+    default : 0.3
+    __constraints__ : -0.9 <= x <= 0.9
+    __description__ : 録音可能な音源の方向の上限（Kinectの正面を0とする)
   - name : min_angle
-    type : double
-    defaultValue : -0.3
-    constraints : -0.9 <= x <= 0.9
-    description : 録音可能な音源の方向の下限（Kinectの正面を0とする)
+    __type__ : double
+    default : -0.3
+    __constraints__ : -0.9 <= x <= 0.9
+    __description__ : 録音可能な音源の方向の下限（Kinectの正面を0とする)
     
