--- a/YAML/NoiseReduction.yaml
+++ b/YAML/NoiseReduction.yaml
@@ -1,14 +1,14 @@
 name : NoiseReduction
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: Noise Reduction
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -43,32 +43,32 @@ serviceport :
 
 configuration :
   - name : SampleRate
-    type : int
-    defaultValue : 16000
-    constraints : x >= 1
-    description : 入力音声データのサンプリング周波数(Hz)
+    __type__ : int
+    default : 16000
+    __constraints__ : x >= 1
+    __description__ : 入力音声データのサンプリング周波数(Hz)
   - name : CenterFrequency
-    type : int
-    defaultValue : 500
-    constraints : x >= 1
-    description : プリエンファシスモード及びディエンファシスモードでの中心周波数(Hz)
+    __type__ : int
+    default : 500
+    __constraints__ : x >= 1
+    __description__ : プリエンファシスモード及びディエンファシスモードでの中心周波数(Hz)
   - name : FrequencyMax
-    type : int
-    defaultValue : 700
-    constraints : x >= 1
-    description : バンドパスフィルタモードでの最大周波数(Hz)
+    __type__: int
+    default : 700
+    __constraints__ : x >= 1
+    __description__ : バンドパスフィルタモードでの最大周波数(Hz)
   - name : FrequencyMin
-    type : int
-    defaultValue : 300
-    constraints : x >= 1
-    description : バンドパスフィルタモードでの最小周波数(Hz)
+    __type__ : int
+    default : 300
+    __constraints__ : x >= 1
+    __description__ : バンドパスフィルタモードでの最小周波数(Hz)
   - name : Power
-    type : int
-    defaultValue : 1
-    constraints : x >= 1
-    description : 強調倍率
+    __type__ : int
+    default : 1
+    __constraints__ : x >= 1
+    __description__ : 強調倍率
   - name : ModeSelect
-    type : string
-    defaultValue : premp
-    constraints : premp,deemp,bpf
-    description : フィルタモード選択 「premp」=プリエンファシスモード、「deemp」=ディエンファシスモード、「bpf」=バンドパスフィルタモード
+    __type__ : string
+    default : premp
+    __constraints__ : premp,deemp,bpf
+    __description__ : フィルタモード選択 「premp」=プリエンファシスモード、「deemp」=ディエンファシスモード、「bpf」=バンドパスフィルタモード
