--- a/YAML/PortAudioInput.yaml
+++ b/YAML/PortAudioInput.yaml
@@ -3,14 +3,14 @@
 name: PortAudioInput
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: Audio Input Component with PortAudio Library
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -45,20 +45,20 @@ serviceport : []
 
 configuration :
   - name : InputSampleRate
-    type : int
-    defaultValue : 16000
-    constraints : x >= 1
-    widget: spin
-    description : 録音する音声のサンプリング周波数(Hz)
+    __type__ : int
+    default : 16000
+    __constraints__ : x >= 1
+    __widget__: spin
+    __description__ : 録音する音声のサンプリング周波数(Hz)
   - name : InputChannelNumbers
-    type : int
-    defaultValue : 1
-    constraints : x >= 1
-    widget: spin
-    description : 録音する音声データのチャンネル数
+    __type__ : int
+    default : 1
+    __constraints__ : x >= 1
+    __widget__: spin
+    __description__ : 録音する音声データのチャンネル数
   - name : InputSampleByte
-    type : string
-    defaultValue : int16
-    constraints : (int8,int16,int24,int32)
-    widget: radio
-    description : 録音する音声のフォーマット(ビット深度)
+    __type__ : string
+    default : int16
+    __constraints__ : (int8,int16,int24,int32)
+    __widget__: radio
+    __description__ : 録音する音声のフォーマット(ビット深度)
