--- a/YAML/PulseAudioOutput.yaml
+++ b/YAML/PulseAudioOutput.yaml
@@ -1,14 +1,14 @@
 ame: PulseAudioOutput
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: Audio Input Component with PlusAudio Library
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -43,22 +43,22 @@ serviceporr : []
 
 configuration :
   - name : OutputSampleRate
-    type : int
-    defaultValue : 16000
-    constraints" : x >= 1
-    description" : 再生する音声のサンプリング周波数(Hz)
+    __type__ : int
+    default : 16000
+    __constraints__ : x >= 1
+    __description__ : 再生する音声のサンプリング周波数(Hz)
   - name : OutputChannelNumbers
-    type : int
-    defaultValue : 1
-    constraints : x >= 1
-    description : 再生する音声データのチャンネル数
+    __type__ : int
+    default : 1
+    __constraints__ : x >= 1
+    __description__ : 再生する音声データのチャンネル数
   - name : OutputSampleByte
-    type : string
-    defaultValue : 16bits
-    constraints : 8bits,16bits,24bits,32bits
-    description : 再生する音声のフォーマット(ビット深度)
+    __type__ : string
+    default : 16bits
+    __constraints__ : 8bits,16bits,24bits,32bits
+    __description__ : 再生する音声のフォーマット(ビット深度)
   - name : BufferLength
-    type : double
-    defaultValue : 0.1
-    constraints : x >= 0
-    description : 再生する音声データ用のバッファ長（秒）
+    __type__ : double
+    default : 0.1
+    __constraints__ : x >= 0
+    __description__ : 再生する音声データ用のバッファ長（秒）
