--- a/YAML/SamplingRateConverter.yaml
+++ b/YAML/SamplingRateConverter.yaml
@@ -1,14 +1,14 @@
 name : SamplingRateConverter
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: Sampling Rate Converter
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -41,23 +41,23 @@ dataport :
 
 configuration :
   - name : InputSampleRate
-    type : int
-    defaultValue : 16000
-    constraints : x >= 1
-    description : 入力する音声のサンプリング周波数(Hz)
+    __type__ : int
+    default : 16000
+    __constraints__ : x >= 1
+    __description__ : 入力する音声のサンプリング周波数(Hz)
   - name : InputBitDepth
-    type : string
-    defaultValue : 16
-    constraints : 8,16,24,33, float32
-    description : 入力する音声のビット幅
+    __type__ : string
+    default : 16
+    __constraints__ : 8,16,24,33, float32
+    __description__ : 入力する音声のビット幅
   - name : OutputSampleRate
-    type : int
-    defaultValue : 16000
-    constraints : x >= 1
-    description : 変換後の音声データのサンプリング周波数(Hz)
+    __type__ : int
+    default : 16000
+    __constraints__ : x >= 1
+    __description__ : 変換後の音声データのサンプリング周波数(Hz)
   - name : OutputBitDepth
-    type : string
-    defaultValue : 16
-    constraints : 8,16,24,32, float32
-    description : 変換後の音声データのビット幅
+    __type__ : string
+    default : 16
+    __constraints__ : 8,16,24,32, float32
+    __description__ : 変換後の音声データのビット幅
     
