--- a/YAML/WavPlayer.yaml
+++ b/YAML/WavPlayer.yaml
@@ -1,14 +1,14 @@
 name : WavPlayer
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: Play audio data from WAV file
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -37,22 +37,22 @@ dataport :
 configuration :
 
   - name : OutputSampleRate
-    type : int
-    defaultValue : 16000
-    constraints : x >= 1
-    description : 入力される音声データのサンプリング周波数(Hz)
+    __type__ : int
+    default : 16000
+    __constraints__ : x >= 1
+    __description__ : 入力される音声データのサンプリング周波数(Hz)
   - name : ChannelNumbers
-    type : int
-    defaultValue : 1
-    constraints : x >= 1
-    description : 音声データのチャンネル数
+    __type__ : int
+    default : 1
+    __constraints__ : x >= 1
+    __description__ : 音声データのチャンネル数
   - name : FileName
-    type : string
-    defaultValue : wavrecord-default.wav
-    constraints :
-    description : 
+    __type__ : string
+    default : wavrecord-default.wav
+    __constraints__ :
+    __description__ : 
   - name : Delay
-    type : int
-    defaultValue : 1
-    constraints : x >= 1
-    description : Delay
+    __type__ : int
+    default : 1
+    __constraints__ : x >= 1
+    __description__ : Delay
