--- a/YAML/WebRTCVAD.yaml
+++ b/YAML/WebRTCVAD.yaml
@@ -1,14 +1,14 @@
 name : WebRTCVAD
 version: 2.0.0
 vendor: AIST
-max_instances: 1
+max_instance: 1
 executionType: PeriodicExecutionContext
 executionRate: 1.0
 description: VAD using WebRTC
 category: OpenHRI
-componentKind: DataFlowComponent
-activityType: PERIODIC
-componentType: STATIC 
+component_type : STATIC
+activity_type : PERIODIC
+kind: DataFlowComponent
 maintainer: Isao Hara
 author: Isao Hara(isao-hara@aist.go.jp)
 
@@ -41,7 +41,7 @@ dataport :
     
 configuration :
   - name : FileterLength
-    type : int 
-    defaultValue : 5
-    constraints : x >= 1
-    description : Filter length to smooth voice detection result.
+    __type__ : int 
+    default : 5
+    __constraints__ : x >= 1
+    __description__ : Filter length to smooth voice detection result.
